fix transition flickering

--- a/assets/stylesheets/modules/speakers.sass
+++ b/assets/stylesheets/modules/speakers.sass
@@ -115,6 +115,9 @@ $diamondSize: 310px
   text-decoration: none
   color: $yellow
   overflow: hidden
+  -webkit-backface-visibility: hidden
+  -moz-backface-visibility: hidden
+  -ms-backface-visibility: hidden
   &:hover
     .speaker__image-overlay
       opacity: 1
